# ida_auto

./: cli.py  function_list.py  pyproject.toml
