[tool.poetry]
name = "auto-ida"
version = "0.1.0"
description = ""
authors = ["ESPR3SS0"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
rich = "^13.7.0"
pandas = "^2.1.3"
typing-extensions = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
